# graph-ai-platform

./: .gitignore  BAIT_Platform_Complete_Design.md  BAIT_Platform_Design_Doc_v2.md  BAIT_Platform_Design_Doc_v3.docx  BAIT_Platform_Design_Doc_v3.md  BAIT_Platform_Design_Doc_v4.md  BAIT_Platform_Design_Doc_v5.1.md  BAIT_Platform_Design_Doc_v5.md  BAIT_Platform_Design_Doc_v6_supplement.md  BAIT_User_Messages_Summary.md  BAIT_V6_Worldview_Discussion.md  BAIT_v5_Discussion_Points.md  LICENSE  PYTHON_FIRST_VISUAL_AI_PLATFORM_PLAN.md  _dev.html  _gen_pdf.py  reasonix.toml
graph_ai_platform/: ARCHITECTURE_DISCUSSION.md  ARCHITECTURE_V2.md  EDITOR_COMPARISON.md  EDITOR_RETHINK.md  pyproject.toml
graph_ai_platform/apps/web/: index.html  package-lock.json  package.json  vite.config.ts
graph_ai_platform/apps/web/src/: App.css  App.tsx  index.css
graph_ai_platform/docs/architecture/: overview.md
graph_ai_platform/services/: __init__.py
graph_ai_platform/services/core/: ai_editor.py  normalize_service.py  server.py  workspace_service.py
graph_ai_platform/services/runtime/: __init__.py
graph_ai_platform/tests/: check_children.py  smoke.py  smoke_runtime.py  verify_fix.py
graph_ai_platform/tests/fixtures/python_subset/: 01_basics.py  02_if_simple.py  03_if_elif_else.py  04_for_list.py  05_for_range.py  06_while_simple.py  07_while_break.py  08_function_simple.py  09_function_multi_args.py  10_function_return.py  (+20 more)
graph_ai_platform/tests/integration/: test_api.py  test_runtime.py
graph_ai_platform/tests/roundtrip/: test_all_fixtures.py  test_comprehensive.py
(+33 files in other folders)
