[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-ai-platform"
version = "0.1.0"
description = "Python-First Visual AI Programming Platform — core IR, parser, and codegen"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]
